relnote: Retransmit initially encrypted packets when a reject is received with enough information to re-establish encryption. Protected by FLAGS_quic_reply_to_rej.

Merge internal change: 118574673

R=jri@chromium.org, rch@chromium.org
BUG=599163

Review URL: https://codereview.chromium.org/1842133002

Cr-Commit-Position: refs/heads/master@{#384103}

Former-commit-id: edd3962e6c1e8f3b3db8ee2dd399b9f0150e58e4