net/tools/quic/end_to_end_test.cc
@@ -449,13 +449,12 @@ class EndToEndTest : public ::testing::TestWithParam<TestParams> {
   // being discarded, based on connection stats.
   // Calls server_thread_ Pause() and Resume(), which may only be called once
   // per test.
-  void VerifyCleanConnection(bool /*had_packet_loss*/) {
+  void VerifyCleanConnection(bool had_packet_loss) {
     QuicConnectionStats client_stats =
         client_->client()->session()->connection()->GetStats();
-    // TODO(ianswett): Re-enable this check once b/19572432 is fixed.
-    // if (!had_packet_loss) {
-    //   EXPECT_EQ(0u, client_stats.packets_lost);
-    // }
+    if (FLAGS_quic_reply_to_rej && !had_packet_loss) {
+      EXPECT_EQ(0u, client_stats.packets_lost);
+    }
     EXPECT_EQ(0u, client_stats.packets_discarded);
     // When doing 0-RTT with stateless rejects, the encrypted requests cause
     // a retranmission of the SREJ packets which are dropped by the client.
@@ -478,10 +477,9 @@ class EndToEndTest : public ::testing::TestWithParam<TestParams> {
     ASSERT_EQ(1u, dispatcher->session_map().size());
     QuicSession* session = dispatcher->session_map().begin()->second;
     QuicConnectionStats server_stats = session->connection()->GetStats();
-    // TODO(ianswett): Re-enable this check once b/19572432 is fixed.
-    // if (!had_packet_loss) {
-    //   EXPECT_EQ(0u, server_stats.packets_lost);
-    // }
+    if (FLAGS_quic_reply_to_rej && !had_packet_loss) {
+      EXPECT_EQ(0u, server_stats.packets_lost);
+    }
     EXPECT_EQ(0u, server_stats.packets_discarded);
     // TODO(ianswett): Restore the check for packets_dropped equals 0.
     // The expect for packets received is equal to packets processed fails
